--- a/index.html
+++ b/index.html
@@ -7,6 +7,169 @@
     <title>Basic Agency</title>
 </head>
 <body>
-    
+    <header>
+        <a href="index.html"><img src="assets/img/logo.svg" alt=""></a>
+        <nav>
+            <ul>
+                <li><a href="assets/html/work.html">WORK</a></li>
+                <li><a href="assets/html/about.html">ABOUT</a></li>
+                <li><a href="assets/html/news.html">NEWS</a></li>
+                <li><a href="assets/html/thinking.html">THINKING</a></li>
+                <li><a href="assets/html/contact.html">CONTACT</a></li>
+            </ul>
+        </nav>
+        <div id="toAside">
+            <img src="assets/img/menu.svg" alt="">
+        </div>
+    </header>
+    <aside></aside>
+    <section id="hero">
+        <h1>WHAT’S NEXT STARTS</h1>
+        <h1>●HERE</h1>
+        <video src="assets/img/Hero.mp4" autoplay muted loop></video>
+    </section>
+    <section id="explanation">
+        <hr>
+        <p>STRATEGY, DESIGN, TECHNOLOGY</p>
+        <img src="assets/img/branding-img.svg" alt="">
+        <p>
+            BASIC® is a branding and digital design agency building products, services, and ecommerce experiences that turn cultural values into company value.
+        </p>
+        <div><a href="assets/html/work.html">SEE THE WORK</a></div>
+        <hr>
+    </section>
+    <section id="featuredEngagements">
+        <h2>FEATURED ENGAGEMENTS</h2>
+        <article>
+            <div>
+                <img src="assets/img/google-dark.svg" alt="">
+                <hr class="line">
+                <h4>GOOGLE</h4>
+                <hr>
+                <p>
+                    Our embedded partnership with Google is as deep as it gets. We’re the lead creative agency for Google Store and provide strategy, design, and prototyping to other divisions.
+                </p>
+            </div>
+            <div>
+                <img src="assets/img/patagonia-dark.svg" alt="">
+                <hr class="line">
+                <h4>PATAGONIA</h4>
+                <hr>
+                <p>
+                    Ongoing partnership providing strategy, branding, experience design, and development focused on bringing their mission and offerings to consumers through brand-led programs and platforms.
+                </p>
+            </div>
+            <div>
+                <img src="assets/img/airbnb-dark.svg" alt="">
+                <hr class="line">
+                <h4>AIRBNB</h4>
+                <hr>
+                <p>
+                    Helping the world’s leading peer-to-peer hospitality company with creative vision, experience strategy, and execution in partnership with various departments and divisions internally at Airbnb.
+                </p>
+            </div>
+            <div>
+                <img src="assets/img/herman-miller-resized.svg" alt="">
+                <hr class="line">
+                <h4>HERMAN MILLER</h4>
+                <hr>
+                <p>
+                    A collaborative and performance incentivized partnership with our teams working side by side to reimagine the digital shopping experiences for Herman Miller, Design Within Reach, and Hay.
+                </p>
+            </div>
+            <div>
+                <img src="assets/img/under-armour-dark.svg" alt="">
+                <hr class="line">
+                <h4>UNDER ARMOUR</h4>
+                <hr>
+                <p>
+                    Strategy, design, and development to differentiate the iconic brand’s direct-to-consumer experience through an all new omnichannel approach, global eCommerce 
+                </p>
+            </div>
+        </article>
+    </section>
+    <section id="culture">
+        <div>
+            <h2>BASIC® HELPS BRANDS ●CONNECT</h2>
+            <h2>W/ CULTURE</h2>
+            <h6>ADWEEK <span>(AGENCY SPOTLIGHT)</span></h6>
+            <a href="assets/html/about.html">About us</a>
+        </div>
+        <video src="assets/img/Culture.mp4" autoplay muted loop></video>
+    </section>
+    <section id="featuredNews">
+        <h2>FEATURED NEWS</h2>
+        <article>
+            <img src="assets/img/Adweek.jpg" alt="">
+            <div>
+                <h3>BASIC® Deemed One of the World’s Fastest Growing Agencies by Adweek</h3>
+                <h4>PRESS 09.25.19</h4>
+            </div>
+            <img src="assets/img/arrow.svg" alt="">
+        </article>
+        <article>
+            <img src="assets/img/brand.jpg" alt="">
+            <div>
+                <h3>The Webby Awards Select BASIC® to Rethink the Future of Their Brand and Digital Platform</h3>
+                <h4>WORK 12.13.19</h4>
+            </div>
+            <img src="assets/img/arrow.svg" alt="">
+        </article>
+        <article>
+            <img src="assets/img/Furrion-Partnership.jpg" alt="">
+            <div>
+                <h3>BASIC® and Furrion partner to launch all new eCommerce website built for a D2C future</h3>
+                <h4>WORK 08.29.19</h4>
+            </div>
+            <img src="assets/img/arrow.svg" alt="">
+        </article>
+    </section>
+    <section id="footerContact">
+        <img src="assets/img/footer-logo.svg" alt="">
+        <h3>We collaborate with ambitious brands and people. <a href="assets/html/contact.html">Let’s connect</a> :)</h3>
+        <div>
+            <h4>● STAY IN THE KNOW</h4>
+            <input type="email" name="" id="" placeholder="Email Address">
+            <input type="button" value="Submit">
+        </div>
+        <div class="container3">
+            <div>
+                <h4>● Social</h4>
+                <ul>
+                    <li><a href="#">Instagram</a></li>
+                    <li><a href="#">Twitter</a></li>
+                    <li><a href="#">Linkedin</a></li>
+                    <li><a href="#">Facebook</a></li>
+                </ul>
+            </div>
+            <div>
+                <h4>● INITIATIVES</h4>
+                <ul>
+                    <li><a href="#">Crafted</a></li>
+                    <li><a href="#">Culture Manual</a></li>
+                    <li><a href="#">Applied</a></li>
+                    <li><a href="#">Brandbeats</a></li>
+                    <li><a href="#">Moves</a></li>
+                </ul>
+            </div>
+            <div>
+                <h4>● OFFICES</h4>
+                <ul>
+                    <li><a href="#">San Diego – CA</a></li>
+                    <li><a href="#">Bay Area – CA</a></li>
+                    <li><a href="#">St. Louis – MO</a></li>
+                </ul>
+            </div>
+        </div>
+    </section>
+    <footer>
+        <p>BASIC®, INC 10 - 20©</p>
+        <p>EASY TO UNDERSTAND, IMPOSSIBLE TO IGNORE.™</p>
+        <p>TERMS, PRIVACY POLICY</p>
+    </footer>
+    <script>
+        let index = true
+    </script>
+    <script src="assets/js/main.js"></script>
 </body>
 </html>
